tests/models/enum/named/u64/pass/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = "val")]
        value: u64
    },
}
fn main() {}
