tests/models/enum/named/u64/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        u64
    ),
}
fn main() {}
